// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly when 1 expense is provided 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;

exports[`should render ExpensesSummary correctly when various expenses are provided 1`] = `
<div>
  <h2>
    Viewing 
    5
     
    expenses
     totalling 
    $1,234,567.89
  </h2>
</div>
`;
